# sofa

./: .gitignore  CHANGELOG.md  CMakeLists.txt
SofaAdvanced/: config.h.in
SofaGeneral/: config.h.in
SofaGui/: config.h.in
SofaKernel/SofaFramework/: SofaMacros.cmake
SofaKernel/cmake/: CompilerOptions.cmake
SofaMisc/: config.h.in
applications/plugins/SofaImplicitField/: CMakeLists.txt  initSofaImplicitField.cpp  registerCollisionModelToFactory.cpp  registerCollisionModelToFactory.h
applications/plugins/SofaImplicitField/components/collision/: ScalarFieldCollisionModel.cpp  ScalarFieldCollisionModel.h  ScalarFieldIntersection.cpp  ScalarFieldIntersection.h  ScalarFieldIntersectionLine.cpp  ScalarFieldIntersectionLine.h
applications/plugins/SofaImplicitField/components/engine/: RayMarchingEngine.cpp  RayMarchingEngine.h
applications/plugins/SofaImplicitField/components/geometry/: CubicField.cpp  CubicField.h  CustomField.cpp  CustomField.h  DiscreteGridField.cpp  DiscreteGridField.h  HexagField.h  ImplicitFieldTransform.cpp  ImplicitFieldTransform.h  ScalarDistanceField.cpp  ScalarDistanceField.h  ScalarField.cpp  ScalarField.h  SphericalField.cpp  SphericalField.h  SurfaceMeshGenerationFromScalarField.cpp  TorusField.cpp  TorusField.h  TriprismField.cpp  TriprismField.h  cubefield.cpp  twist.h
applications/plugins/SofaImplicitField/components/mapping/: ImplicitSurfaceMapping.h  ImplicitSurfaceMapping.inl
applications/plugins/SofaImplicitField/components/visual/: ImplicitFieldShaderVisualization.inl  PointCloudImplicitFieldVisualization.cpp
applications/plugins/SofaImplicitField/examples/: CubicFieldCollisionModel.scn  CubicFieldCollisionModel.scn.qglviewer.view  CustomFieldVisualization.scn  DiscreetGrid.psl  Extrusion2D.psl  PointCloudImplicitFieldVisualization.scn  ScalarFieldCollisionModel.scn  ShapeTreeDemo1.psl  ShapeTreeDemo3.scn  TorusFieldCollisionModel.scn  TorusFieldCollisionModel.scn.qglviewer.view  TriprismFieldCollisionModel.scn  cubesphere.py  customfield.py  customfield1.py  customfield2.py  customshape.py  dfgeom.pyx  dfgeom_bcp.pyx  example1.psl  example2.py  field1.py  gen.py  gen_test.py  shape_demo.py  shapetreedemo.py  shapetreedemo3.py  updater.py  vector.h
applications/plugins/SofaImplicitField/examples/shaders/: implicitFieldRenderer01.frag  implicitFieldRenderer01.vert
applications/plugins/SofaImplicitField/python/SofaImplicitField/: __init__.py
applications/plugins/SofaImplicitField/python/SofaImplicitField/C_SofaImplicitField/: C_SofaImplicitField.cpp
applications/plugins/SofaImplicitField/src/SofaImplicitField/: initSofaImplicitField.cpp
applications/plugins/SofaImplicitField/src/SofaImplicitField/components/geometry/: CustomField.cpp  DiscreteGridField.cpp  DiscreteGridField.h  ScalarField.cpp  ScalarField.h  SphericalField.cpp  SphericalField.h  SurfaceMeshGenerationFromScalarField.cpp  SurfaceMeshGenerationFromScalarField.h
applications/plugins/SofaImplicitField/src/SofaImplicitField/components/mapping/: ImplicitSurfaceMapping.cpp  ImplicitSurfaceMapping.h
applications/plugins/SofaImplicitField/src/SofaImplicitField/components/visual/: ImplicitFieldShaderVisualization.cpp  PointCloudImplicitFieldVisualization.cpp  PointCloudImplicitFieldVisualization.h
examples/: origamiTest.pyscn
modules/SofaBoundaryCondition/: ConstantForceField.inl  PlaneForceField.h
modules/SofaConstraint/: BilateralInteractionConstraint.inl  CMakeLists.txt  DOFBlockerLMConstraint.h  DistanceLMConstraint.h  DistanceLMContactConstraint.h  FixedLMConstraint.h  FrictionContact.inl  GenericConstraintSolver.cpp  GenericConstraintSolver.h  LinearSolverConstraintCorrection.h  MORFrictionContact.cpp  MORFrictionContact.h  MORFrictionContact.inl  MORUnilateralInteractionConstraint.cpp  MORUnilateralInteractionConstraint.h  MORUnilateralInteractionConstraint.inl  SlidingConstraint.h  SlidingConstraint.inl  UnilateralInteractionConstraint.cpp  UnilateralInteractionConstraint.h  UnilateralInteractionConstraint.inl
modules/SofaEditor/: CMakeLists.txt  SofaEditorConfig.cmake.in  initSofaEditor.cpp
modules/SofaEditor/SofaEditor_test/: BaseSofaEditor_test.cpp  CMakeLists.txt
modules/SofaEditor/examples/: example.pyscn
modules/SofaEditor/python/: CMakeLists.txt  CySofaEditor.cpp  CySofaEditor.pyx  main.cpp
modules/SofaEditor/python/SofaEditor/: __init__.py
modules/SofaEditor/src/SofaEditor/: BaseSofaEditor.h  config.h
modules/SofaGeneralAnimationLoop/: MechanicalMatrixMapper.cpp  MechanicalMatrixMapper.h
modules/SofaGeneralEngine/: AverageCoord.h  BoxROI.h  ClusteringEngine.h  ComplementaryROI.h  ComplementaryROI.inl  DifferenceEngine.h  DilateEngine.h  ExtrudeEdgesAndGenerateQuads.h  ExtrudeQuadsAndGenerateHexas.h  ExtrudeSurface.h  GenerateCylinder.h  GenerateGrid.h  GenerateRigidMass.h  GenerateRigidMass.inl  GenerateSphere.h  GroupFilterYoungModulus.h  HausdorffDistance.h  IndexValueMapper.h  Indices2ValuesMapper.h  IndicesFromValues.h  JoinPoints.h  MathOp.h  MathOp.inl  MergeMeshes.h  MergeMeshes.inl  MergePoints.h  MergeROIs.h  MergeVectors.h  MeshBarycentricMapperEngine.h  MeshClosingEngine.h  MeshROI.h  MeshSampler.h  MeshSplittingEngine.h  MeshSubsetEngine.h  NearestPointROI.h  NormEngine.h  NormalsFromPoints.h  PairBoxRoi.h  PlaneROI.h  PointsFromIndices.h  (+19 more)
modules/SofaGeneralLoader/: MeshSTLLoader.cpp  MeshSTLLoader.h
modules/SofaGeneralObjectInteraction/: AttachConstraint.h
modules/SofaGeneralSimpleFem/: HexahedronFEMForceFieldAndMass.h  HexahedronFEMForceFieldAndMass.inl  TriangularFEMForceFieldOptim.h
modules/SofaGeometry/: CMakeLists.txt
modules/SofaGeometry/python/: CMakeLists.txt
modules/SofaGeometry/python/SofaGeometry/: Plane.cpp  Ray.cpp  __init__.py  vector.cpp
modules/SofaGeometry/python/SofaGeometry/CGAL/: __init__.py  cpp_kernel.pxd  cpp_point2D.pxd  cpp_polygon2D.pxd  cpp_vector2D.pxd  kernel.pxd  kernel.pyx  point2D.pxd  point2D.pyx  polygon2D.pxd  polygon2D.pyx  test.py  vector2D.pxd  vector2D.pyx
modules/SofaGeometry/src/SofaGeometry/CGAL/: Kernel.h  Point2.h  Polygon2.cpp  Polygon2.h  Vector2.h
(+283 files in other folders)
